<resources>
    <string name="app_name">My Visit</string>
    <string name="collection">Collection</string>
    <string name="retention">Retention</string>
    <string name="activities">Actioned</string>
    <string name="new_activities">New Activities</string>
    <string name="customer_type">Customer Type</string>
    <string name="reminders">Reminders</string>
    <string name="logout">Logout</string>

    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="lbl_warn_password">Enter your password</string>
    <string name="lbl_warn_user_name">Enter user name</string>
    <string name="requesting">Requesting</string>
    <string name="processing">please wait we are processing your request</string>
    <string name="search">Search</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="ok">ok</string>
    <string name="name">Name</string>
    <string name="msisdn">MSISDN</string>
    <string name="zip">Zip</string>
    <string name="dummy_address"> Adress1 \nAddress2 A \nAddress 3\n Address4</string>
    <string name="visit_status">Visit Status</string>
    <string name="visit_feedback">Feedback </string>
    <string name="last_visited_date">Visited On</string>
    <string name="view_location">View Location</string>
    <string name="update_location">Update Location</string>
    <string name="reminder_hint">mm/dd/yyyy</string>


    <string-array name="dummy_array">
        <item>item 1</item>
        <item>item 2</item>
        <item>item 3</item>
        <item>item 4</item>
        <item>item 5</item>
        <item>item 6</item>
    </string-array>
    <string name="feedback">Feedback</string>
    <string name="reason">Reason</string>
    <string name="remarks">Remarks</string>
    <string name="total_visit">Total Visit</string>
    <string name="rating">Rate Us</string>
    <string name="land_mark">Landmark</string>
    <string name="hint_remarks">Please write your comments here...</string>
    <string name="hint_land_marks">Write landmark</string>
    <string name="title_submit">UPDATE VISIT STATUS</string>
    <string name="title_from_executive">EXECUTIVE VISIT DETAILS</string>
    <string name="title_from_mico">MICO VISIT DETAILS</string>
    <string name="title_from_zsm">ZSM VISIT DETAILS</string>
    <string name="title_details">CUSTOMER DETAILS</string>
    <string name="submit">Submit</string>
    <string name="follow_up_date">Follow Up Date</string>
    <string name="amount_collected">Amount Collected</string>

    <string name="upc">UPC</string>
    <string name="cust_sub_type">Customer sub type</string>
    <string name="segment">Segment</string>
    <string name="subscriber_type">Subscriber Type</string>
    <string name="credit_code">Cs Credit Code</string>
    <string name="alternate_num">Alternate Number</string>
    <string name="serv_seg">Serv Seg</string>

    <string name="biller">Biller</string>
    <string name="ser">Ser</string>
    <string name="Segment">Segment</string>
    <string name="due_amount">Due Amount</string>
    <string name="bucket">Bucket</string>
    <string name="type">Type</string>
    <string name="crm_status">Crm Status</string>
    <string name="my_idea_code">My Idea Code</string>
    <string name="my_idea_location">My Idea Allocation</string>
    <string name="land_line1">Alternate Number 1</string>
    <string name="land_line2">Alternate Number 2</string>
    <string name="activatiom_mi">Activation Mi</string>
    <string name="my_idea">My Idea</string>

    <string name="warn_success">Success</string>
    <string name="warn_time_out_title">Time Out</string>
    <string name="warn_time_out_message">Your request timed out</string>
    <string name="warn_server_error">Request Failed</string>

    <string name="bal_00">Bal_00</string>
    <string name="bal_30">Bal_30</string>
    <string name="bal_other">> Bal_30</string>
    <string name="category">Category</string>
    <string name="rate_plan">Rate Plan</string>
    <string name="default_Habit">Default Habit</string>
    <string name="current_status">Current Status</string>
    <string name="cust_num">Customer Number</string>
    <string name="pay_on">Pay On</string>

    <string name="warn_request_timed_out">Your request timed out, please retry.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="dob">Date Of Birth</string>
    <string name="doj">Date Of Joining</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="address3">Address Line 3</string>
    <string name="father_name">Father\'s Name</string>
    <string name="mi_code">Mi Code</string>
    <string name="mobile_no">Mobile No</string>

    <string name="executive">Executive</string>
    <string name="mico">Mico</string>
    <string name="zsm">Zsm</string>

    <string name="warn_name">Enter your Name</string>
    <string name="warn_dob">Enter your DOB</string>
    <string name="warn_address">Enter your Address</string>
    <string name="warn_zip">Enter Zip</string>
    <string name="warn_mobile">Enter Mobile Number</string>
    <string name="warn_invalid_mobile">Invalid Mobile Number</string>
    <string name="warn_mi_code">Enter your MI Code</string>
    <string name="warn_password">Enter a new password</string>
    <string name="warn_password_minim">Minimum 6 characters required</string>
    <string name="warn_password_miss_match">Password miss match</string>
    <string name="personal">Personal</string>
    <string name="login">Login</string>
    <string name="official">Official</string>
    <string name="storage_permission_message">Please enable storage access permission to add photo</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="timer_dummy">00:00 s</string>
    <string name="resend_password">Resend Password</string>


    <string name="warn_not_visited">Not visited</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_response_message">No response from server</string>
    <string name="logout_message">App will be logout and exited</string>


</resources>
