<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">


    <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
        android:id="@+id/editTextForgotMICode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:drawableLeft="@mipmap/ic_phone"
        app:hint="@string/mi_code"
        app:maxLength="15" />

    <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
        android:id="@+id/editTextForgotMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:drawableLeft="@mipmap/ic_phone"
        app:hint="@string/mobile_no"
        app:inputType="number"
        app:maxLength="12" />

    <tech.libin.rahul.ideaproject.views.widgets.button.FOSButton
        android:id="@+id/buttonForgotVerify"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:text="@string/verify" />

</LinearLayout>