<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tech.libin.rahul.ideaproject.views.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_above="@+id/editTextUsernameLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/image_vertical_space"
        android:src="@mipmap/logo_500" />

    <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
        android:id="@+id/editTextUsernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        app:drawableLeft="@mipmap/ic_password"
        app:hint="@string/user_name"
        app:maxLength="150" />


    <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUsernameLogin"
        android:maxLength="15"
        app:drawableLeft="@mipmap/ic_user"
        app:hint="@string/password"
        app:inputType="password"
        app:maxLength="15" />


    <LinearLayout
        android:id="@+id/linearLayoutSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPasswordLogin"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="2">

        <tech.libin.rahul.ideaproject.views.widgets.button.FOSButton
            android:id="@+id/buttonSignInLogin"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginRight="2dp"
            android:text="@string/sign_in" />

        <tech.libin.rahul.ideaproject.views.widgets.button.FOSButton
            android:id="@+id/buttonSignUpLogin"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginLeft="2dp"
            android:text="@string/sign_up" />

    </LinearLayout>

    <tech.libin.rahul.ideaproject.views.widgets.button.FOSButton
        android:id="@+id/buttonForgotPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_below="@+id/linearLayoutSubmit"
        android:layout_marginTop="@dimen/edt_vertical_margin"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:textAllCaps="false" />


</RelativeLayout>
