<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background"
    tools:context="tech.libin.rahul.ideaproject.views.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <FrameLayout
            android:id="@+id/profilePicContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/image_vertical_space"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/imageViewRegProfilePic"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_marginBottom="@dimen/reg_profilepic_margin"
                android:layout_marginRight="@dimen/reg_profilepic_margin"
                android:src="@mipmap/profile_image_placeholder" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@mipmap/ic_photo"
                app:backgroundTint="@color/colorPrimary" />
        </FrameLayout>

        <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
            android:id="@+id/editTextRegDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profilePicContainer"
            app:drawableLeft="@mipmap/ic_calendar"
            app:hint="@string/dob"
            app:maxLength="150" />

        <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
            android:id="@+id/editTextRegJoinDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextRegDOB"
            android:maxLength="15"
            app:drawableLeft="@mipmap/ic_calendar"
            app:hint="@string/doj"
            app:maxLength="15" />

        <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
            android:id="@+id/editTextRegAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextRegJoinDate"
            android:maxLength="15"
            app:drawableLeft="@mipmap/ic_address"
            app:hint="@string/address"
            app:inputType="multiLine"
            app:maxLength="15" />

        <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
            android:id="@+id/editTextRegFatherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextRegAddress"
            app:drawableLeft="@mipmap/ic_user"
            app:hint="@string/father_name"
            app:maxLength="150" />

        <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
            android:id="@+id/editTextRegMICode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextRegFatherName"
            app:drawableLeft="@mipmap/ic_phone"
            app:hint="@string/mi_code"
            app:maxLength="150" />

        <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSIconEditText
            android:id="@+id/editTextRegMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextRegMICode"
            app:drawableLeft="@mipmap/ic_phone"
            app:hint="@string/mobile_no"
            app:maxLength="150" />

        <tech.libin.rahul.ideaproject.views.widgets.button.FOSButton
            android:id="@+id/buttonRegSignUp"
            style="@style/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@+id/editTextRegMobileNo"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="@dimen/button_vertical_margin"
            android:text="@string/sign_up" />


    </RelativeLayout>
</ScrollView>
