<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_holo_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
            style="@style/DetailsTitleViewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/detail_back"
            android:orientation="vertical"
            android:padding="10dp">

            <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mr. Kabeer A.V"
                android:textSize="20sp"
                app:fos_textview_font="sansation_bold"/>

            <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                android:id="@+id/textViewPhoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="+919567842009"
                />

            <View
                style="@style/DialogDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/upc"
                    android:textStyle="bold"
                    app:fos_textview_font="sansation_bold"/>

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Begining Date"
                    app:fos_textview_font="sansation_bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewUpc"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="upc" />


                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewBegeningDate"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="01/16/2017" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/segment"
                    app:fos_textview_font="sansation_bold"/>

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Subscriber Type"
                    app:fos_textview_font="sansation_bold"/>

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/serv_seg"
                    app:fos_textview_font="sansation_bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewSegment"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="122" />

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewSubType"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="122" />


                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewServSeg"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="122" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Customer Type"
                    app:fos_textview_font="sansation_bold"/>

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cust_sub_type"
                    app:fos_textview_font="sansation_bold"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewCustomerType"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Organization" />

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewCustSubType"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="OUT" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/credit_code"
                    app:fos_textview_font="sansation_bold"/>

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    style="@style/DetailsViewHeader"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/alternate_num"
                    app:fos_textview_font="sansation_bold"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewCsCreditCode"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="9226" />

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:id="@+id/textViewAlternateNum"
                    style="@style/DetailsViewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Triumph 199" />


            </LinearLayout>

            <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                style="@style/DetailsViewHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address"
                app:fos_textview_font="sansation_bold"/>

            <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                android:id="@+id/textViewAddress"
                style="@style/DetailsViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recViewOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
            style="@style/DetailsTitleViewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_submit" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="@color/detail_body_color"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:orientation="vertical">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginTop="3dp" />

                <Switch
                    android:id="@+id/switchLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_location"
                    android:layout_marginTop="7dp"/>

                <Switch
                    android:id="@+id/switchUpdateLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_location"
                    android:layout_marginTop="7dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal">

                    <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/visit_status" />

                    <Spinner
                        android:id="@+id/spinnerStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:minHeight="45dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linLayoutReminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="3">

                    <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reminder_date" />

                    <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSEditText
                        android:id="@+id/editTextReminderDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:maxLength="12" />
                </LinearLayout>

                <tech.libin.rahul.ideaproject.views.widgets.textview.FOSTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/remarks" />

                <tech.libin.rahul.ideaproject.views.widgets.edittext.FOSEditText
                    android:id="@+id/editTextRemarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_remarks"
                    android:maxLength="250"
                    android:minHeight="150dp" />

                <tech.libin.rahul.ideaproject.views.widgets.button.FOSButton
                    android:id="@+id/buttonSubmit"
                    style="@style/DetailsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>